--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "classnames-plus",
   "version": "1.0.0",
   "description": "advanced utility for programmatically resolving classnames",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "mocha"
   },
+  
+  "homepage": "https://github.com/andrew-x/classnames-plus",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/andrew-x/classnames-plus.git"
+  },
+  "bugs": "https://github.com/andrew-x/classnames-plus/issues",
+
   "keywords": [
     "programmatic",
     "logic",
