--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "advanced utility for programmatically resolving classnames",
   "main": "./index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest --config jestconfig.json",
+    "build": "tsc"
   },
-
   "homepage": "https://github.com/andrew-x/better-classnames",
   "repository": {
     "type": "git",
     "url": "https://github.com/andrew-x/better-classnames.git"
   },
   "bugs": "https://github.com/andrew-x/better-classnames/issues",
-
   "keywords": [
     "programmatic",
     "logic",
@@ -31,8 +30,11 @@
   "author": "Andrew Xia",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "chai": "^4.2.0",
+    "jest": "^26.6.3",
     "mocha": "^7.2.0",
-    "chai": "^4.2.0"
-  },
-  "dependencies": {}
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.3"
+  }
 }
