--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "better-classnames",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "advanced utility for programmatically resolving classnames",
-  "main": "./index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc"
